# austeris

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  traefik.yml
.git-hooks/: pre-commit
.github/workflows/: rust-ci.yml
asset-service/: Cargo.toml  Dockerfile
asset-service/src/: main.rs
austeris-common/: Cargo.toml
austeris-common/src/: config.rs  db.rs  error.rs  lib.rs  utils.rs
austeris-common/tests/: config.rs  db.rs  error.rs  utils.rs
core_service/: Cargo.toml  Dockerfile
core_service/.sqlx/: query-06b247c3e6cfdcbc6da2d30a306bf5f25fdf822c0d1528d25b18fc85d1abcaf5.json  query-2fc8b3d608634d9f26b894cd65829cd3e62acb6d7624c43755d1220a6f74e562.json  query-58ac2a94fa007349afb6a5b029f063e8c4665a4593c7fe30551df7628d812ec4.json  query-5f6ff5777f7a772c4d283ad05bfda5999d2cdf42ec63e9f1177a65e820084fc9.json  query-84afb1e00620ac4546b004b0d1fb5d0f07d8a3c640a1d6fb95474f36498fc5cf.json  query-8d6e93e098a67cf4fa2ca8757f3e725e5db6771f650bc2de933de1aa9c668faf.json  query-a09bd6a64653060265f07ba3bb0f6c2b7841c4eb2d767c5230ba09983ced5ee3.json  query-b6a287d8507b2ded86ea1f21b463052b415b370c1f424a2f36211174c592c737.json  query-bd5997b39402f6dd410eafb82687b5f0961c836ebf7270177c76ba6ad9953d35.json  query-c24f05b175b0acb51eb1e598fd36d36cc320bc9fe1c38724fd7bdf962441d26f.json  query-dd564782b4a7e78d8f777dfeb0ef72f69faa9c2efb5f7bc06d3df728989ba3ad.json  query-e29218c81a395df34122279db7f6595c9844a96b587b4aeff168f76ccd71d1eb.json
core_service/src/: db.rs  error.rs  main.rs  utils.rs
core_service/src/dto/: asset.rs  mod.rs  snapshot.rs  transaction.rs  wallet.rs
core_service/src/models/: asset.rs  cmc.rs  mod.rs  snapshot.rs  transaction.rs  wallet.rs
core_service/src/repository/: asset.rs  asset_price.rs  mod.rs  snapshot.rs  transaction.rs  wallet.rs
core_service/src/routes/: asset.rs  mod.rs  snapshots.rs  transaction.rs  wallet.rs
core_service/src/services/: asset.rs  cmc.rs  mod.rs  portfolio.rs  redis.rs  snapshot.rs  transaction.rs  wallet.rs
migrations/: 20231001000000_create_transactions.sql  20240301000000_create_assets.sql  20240301000003_seed_data.sql  2025030100_create_assets.sql  2025030101_create_wallets.sql  2025030102_create_transactions.sql  2025030103_seed_data.sql  20250306000000_create_portfolio_snapshots.sql  2025030800_create_asset_prices.sql
snapshot-service/: Cargo.toml  Dockerfile
snapshot-service/src/: main.rs
transaction-service/: Cargo.toml  Dockerfile
transaction-service/src/: main.rs
user-service/: Cargo.toml  Dockerfile
user-service/src/: main.rs
wallet-service/: Cargo.toml  Dockerfile
wallet-service/src/: main.rs
