[package]
name = "austeris-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "austeris_common"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-web-validator = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
log = "0.4"
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono", "bigdecimal", "uuid"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }