[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
tonic = "0.13"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
austeris-common = { path = "../austeris-common" }
tokio = { version = "1.35", features = ["full"] }
jsonwebtoken = "9.3"

[build-dependencies]
tonic-build = "0.13"